mejora del login

--- a/FrontEnd/views/admin.html
+++ b/FrontEnd/views/admin.html
@@ -12,7 +12,7 @@
 <body>
   <br>
     <div class="container">
-      <a href="../index.html"><i class=" material-icons">keyboard_return</i> Salir</a>
+      <a href="/ProyecTechFrontEnd/index.html"><i class=" material-icons">keyboard_return</i> Salir</a>
         <div class="row">
           <div class="col s12 center">
             <h1>Bienvenido administrador</h1>
